src/objects/Task__c.object
<CustomObject>
    <fields>
        <fullName>PerComplete__c</fullName>
        <label>% Complete</label>
        <summarizedField>TaskDetail__c.PerComplete__c</summarizedField>
        <summaryForeignKey>TaskDetail__c.Task_Id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProjectId__c</fullName>
        <label>Project Id</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>ProductTasks</relationshipLabel>
        <relationshipName>ProductTasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sum_of_per_task_detail_completed__c</fullName>
        <description>SUM Of Per NO. Of  task Detail completed</description>
        <inlineHelpText>SUM Of Per NO. Of  task Detail completed</inlineHelpText>
        <label>Sum of % task detail completed</label>
        <summarizedField>TaskDetail__c.PerComplete__c</summarizedField>
        <summaryForeignKey>TaskDetail__c.Task_Id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Work_hr_s__c</fullName>
        <label>Work hr&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Task</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>